2.20.0:
  - Add Snapshot with memory support.
  - Add VM cloning feature.
2.19.19: CYBL-2038 pass the correct argument to storage resize.
2.19.18: Check vm_folder against its data_center when specified.
2.19.17: Delete use_existing_resource. Change use_external_resource default from using intrinsic functions to boolean.
2.19.16: CYBL-1800 Improve vsphere.cloudify_vsphere.contentlibrary.deployment.delete to delete the VM from the infrastructure
2.19.15: Support check drift.
2.19.14: DSL 1_4 and redhat 8 wagon.
2.19.13: CYBL-1661 modify NIC connectable definition to enforce connected state.
2.19.12: Rebuild.
2.19.11: Build Aarch now
2.19.10: Fix deprecated cookie authentication for content library and fix get_state retries.
2.19.9: Fix minor issues of compatibility with old blueprints and improved get_state logic to skip if no need to start the vm.
2.19.8: Rerelease with Aarch64 Wagon.
2.19.7: RD-3253 vsphere plugin does no fetch IP address for os_family "other"
2.19.6: RD-3158-VM-Resize, Add a "not hot add" functionality to the resize_server operation .
2.19.5: RD-3096-Vsphere-VM-Resize.
2.19.4: CYBL-1164 Make server start op retry properly.
2.19.3: RD-1961 Use runtime properties and operation args in storage type operation.
2.19.2: Return None if cidr not found in ippools.
2.19.1: Fix PyYaml constraint
2.19.0: Add Resource Pool Support
2.18.13: Paramaterize Max Wait Time where used
2.18.12: Paramaterize Max Wait Time where used
2.18.11: Handle no access ports lookup
2.18.10: Fix Regression bug.
2.18.9: Fix regression bug 2.18.7.
2.18.8: Support multiple networks of the same type.
2.18.7: Add create operation for server.
2.18.6: Fix issues in
2.18.5: Add support for connecting opaque network to vm .
2.18.4: Fix Python 3 Bug.
2.18.3: Fix Python 3 Bug.
2.18.2: Allow the op decorator to support relationship and node instance ops.
2.18.1: Some bug.
2.18.0:
  - Add resumable support
  - Add Python3 Support
2.17.0: